[gd_scene load_steps=26 format=3 uid="uid://kli56l5wifew"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_4a55a"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="2_cin3x"]
[ext_resource type="Texture2D" uid="uid://onc7pa8et78a" path="res://assets/HUD/Pause_button.png" id="3_7yfum"]
[ext_resource type="Texture2D" uid="uid://bpkvaho57xiic" path="res://assets/HUD/play_button.png" id="4_4b1b1"]
[ext_resource type="Texture2D" uid="uid://d3fe511ov118s" path="res://assets/HUD/Fastfoward_button.png" id="5_1h2si"]
[ext_resource type="Texture2D" uid="uid://x0e716blyoao" path="res://assets/HUD/Blank_button.png" id="6_tshg0"]
[ext_resource type="Script" path="res://scripts/Gold.gd" id="7_km8i6"]
[ext_resource type="PackedScene" uid="uid://b11qa1ok58ptg" path="res://skilltrees/skill_tree.tscn" id="8_05gsf"]
[ext_resource type="Texture2D" uid="uid://b1a6ulnhl4opq" path="res://assets/HUD/box_background.png" id="9_ddqlf"]
[ext_resource type="Texture2D" uid="uid://bucje24pdr4dv" path="res://tileprueba.png" id="9_yjq7b"]
[ext_resource type="Texture2D" uid="uid://b7c303pkbpm07" path="res://TileMap.png" id="10_ffdxk"]
[ext_resource type="Script" path="res://scripts/unpause_countdown.gd" id="10_i4ccp"]
[ext_resource type="Script" path="res://scripts/TileMap.gd" id="11_x7rl8"]
[ext_resource type="PackedScene" uid="uid://com1u85x7sy52" path="res://entities/primary_weapon.tscn" id="12_238j0"]
[ext_resource type="Script" path="res://scripts/tower_manager.gd" id="13_0trdu"]
[ext_resource type="PackedScene" uid="uid://6qw84vv1brxl" path="res://entities/tower.tscn" id="14_whx4x"]
[ext_resource type="PackedScene" uid="uid://hvvnfjpmdhwo" path="res://entities/turret.tscn" id="15_8q4kn"]
[ext_resource type="Script" path="res://SpawnPoints.gd" id="16_bbnkd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxxcm"]
bg_color = Color(0.2, 0.2, 0.219608, 0.678431)

[sub_resource type="LabelSettings" id="LabelSettings_webyr"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_t0lon"]
font_size = 8

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c02cq"]
texture = ExtResource("6_tshg0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n5epq"]
texture = ExtResource("9_yjq7b")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/custom_data_0 = "wall"
1:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kkfqi"]
texture = ExtResource("10_ffdxk")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/custom_data_0 = "wall"
1:0/0 = 0
1:0/0/custom_data_0 = "wall"
3:0/0 = 0
3:0/0/custom_data_0 = "wall"
4:0/0 = 0
4:0/0/custom_data_0 = "wall"
5:0/0 = 0
5:0/0/custom_data_0 = "wall"
0:1/0 = 0
0:1/0/custom_data_0 = "wall"
1:1/0 = 0
1:1/0/custom_data_0 = "wall"
3:1/0 = 0
3:1/0/custom_data_0 = "wall"
4:1/0 = 0
5:1/0 = 0
5:1/0/custom_data_0 = "wall"
0:2/0 = 0
0:2/0/custom_data_0 = "wall"
1:2/0 = 0
1:2/0/custom_data_0 = "wall"
3:2/0 = 0
3:2/0/custom_data_0 = "wall"
4:2/0 = 0
4:2/0/custom_data_0 = "wall"
5:2/0 = 0
5:2/0/custom_data_0 = "wall"
3:4/0 = 0
3:4/0/custom_data_0 = "wall"
4:4/0 = 0
4:4/0/custom_data_0 = "wall"
3:5/0 = 0
3:5/0/custom_data_0 = "wall"
4:5/0 = 0
4:5/0/custom_data_0 = "wall"

[sub_resource type="TileSet" id="TileSet_ip0x2"]
tile_size = Vector2i(32, 32)
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_n5epq")
sources/1 = SubResource("TileSetAtlasSource_kkfqi")

[node name="Game" type="Node"]
script = ExtResource("1_4a55a")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
layer = 11
script = ExtResource("2_cin3x")

[node name="HUD" type="Node" parent="UI"]

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 100.0
grow_vertical = 0
alignment = 1

[node name="Pause_button" type="TextureButton" parent="UI/HUD/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_7yfum")
texture_pressed = ExtResource("4_4b1b1")
stretch_mode = 0

[node name="Label" type="Label" parent="UI/HUD/HBoxContainer/Pause_button"]
layout_mode = 1
offset_right = 17.0
offset_bottom = 15.0
theme_override_styles/normal = SubResource("StyleBoxFlat_gxxcm")
text = "Esc"
label_settings = SubResource("LabelSettings_webyr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fastforward_button" type="TextureButton" parent="UI/HUD/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("5_1h2si")
stretch_mode = 0

[node name="Label" type="Label" parent="UI/HUD/HBoxContainer/Fastforward_button"]
layout_mode = 0
offset_right = 15.0
offset_bottom = 15.0
theme_override_styles/normal = SubResource("StyleBoxFlat_gxxcm")
text = "Tab"
label_settings = SubResource("LabelSettings_t0lon")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="Label" parent="UI/HUD/HBoxContainer/Fastforward_button"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_gxxcm")
text = "x1"
label_settings = SubResource("LabelSettings_t0lon")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gold" type="Label" parent="UI/HUD"]
unique_name_in_owner = true
modulate = Color(0.196078, 0.196078, 0.196078, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_bottom = 38.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_c02cq")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_km8i6")

[node name="Open_upgrade_menu" type="TextureButton" parent="UI/HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("6_tshg0")
stretch_mode = 0

[node name="Label" type="Label" parent="UI/HUD/Open_upgrade_menu"]
layout_mode = 0
offset_right = 12.0
offset_bottom = 15.0
theme_override_styles/normal = SubResource("StyleBoxFlat_gxxcm")
text = "Q"
label_settings = SubResource("LabelSettings_t0lon")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeTree" parent="UI" instance=ExtResource("8_05gsf")]
unique_name_in_owner = true
visible = false
offset_right = 2.0

[node name="PausePanel" type="Panel" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackGround" type="TextureRect" parent="UI/PausePanel"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 0.309
anchor_right = 0.66
anchor_bottom = 0.642
offset_left = -9.98401
offset_top = 7.76799
offset_right = 7.67999
offset_bottom = 19.984
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ddqlf")

[node name="MarginContainer" type="MarginContainer" parent="UI/PausePanel/BackGround"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PausePanel/BackGround/MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 11

[node name="Label" type="Label" parent="UI/PausePanel/BackGround/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="TextureButton" parent="UI/PausePanel/BackGround/MarginContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("9_ddqlf")
stretch_mode = 0

[node name="Label" type="Label" parent="UI/PausePanel/BackGround/MarginContainer/VBoxContainer/ContinueButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="TextureButton" parent="UI/PausePanel/BackGround/MarginContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("9_ddqlf")
stretch_mode = 0

[node name="Label" type="Label" parent="UI/PausePanel/BackGround/MarginContainer/VBoxContainer/RestartButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="UI/PausePanel/BackGround/MarginContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("9_ddqlf")
stretch_mode = 0

[node name="Label" type="Label" parent="UI/PausePanel/BackGround/MarginContainer/VBoxContainer/ExitButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnpauseTimer" type="Timer" parent="UI/PausePanel"]
process_mode = 3
wait_time = 3.0
one_shot = true

[node name="Countdown" type="Label" parent="UI/PausePanel"]
process_mode = 3
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 150
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_i4ccp")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(2, 0)
tile_set = SubResource("TileSet_ip0x2")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(131072, 262145, 1, 131073, 262145, 1, 131074, 262145, 1, 131075, 262145, 1, 131076, 262145, 1, 131077, 262145, 1, 131078, 262145, 1, 131079, 262145, 1, 131080, 262145, 1, 131081, 262145, 1, 131082, 262145, 1, 131083, 262145, 1, 131084, 262145, 1, 524288, 262145, 1, 524289, 262145, 1, 524290, 262145, 1, 524291, 262145, 1, 524292, 262145, 1, 524293, 262145, 1, 524294, 262145, 1, 524295, 262145, 1, 524296, 262145, 1, 524297, 262145, 1, 524298, 262145, 1, 524299, 262145, 1, 524300, 262145, 1, 524301, 262145, 1, 524302, 262145, 1, 524303, 262145, 1, 524304, 262145, 1, 524305, 262145, 1, 196620, 262145, 1, 262156, 262145, 1, 327692, 262145, 1, 393228, 262145, 1, 458764, 262145, 1, 524306, 262145, 1, 524307, 262145, 1, 524308, 262145, 1, 458772, 262145, 1, 393236, 262145, 1, 327700, 262145, 1, 262164, 262145, 1, 196628, 262145, 1, 131092, 262145, 1, 131093, 262145, 1, 131094, 262145, 1, 131095, 262145, 1, 131096, 262145, 1, 131097, 262145, 1, 589844, 262145, 1, 655380, 262145, 1, 720916, 262145, 1, 786452, 262145, 1, 851988, 262145, 1, 917524, 262145, 1, 917525, 262145, 1, 917526, 262145, 1, 917527, 262145, 1, 917528, 262145, 1, 917529, 262145, 1, 917504, 262145, 1, 917505, 262145, 1, 917506, 262145, 1, 917507, 262145, 1, 917508, 262145, 1, 917509, 262145, 1, 917510, 262145, 1, 917511, 262145, 1, 917512, 262145, 1, 917513, 262145, 1, 917514, 262145, 1, 917515, 262145, 1, 917516, 262145, 1, 917517, 262145, 1, 917518, 262145, 1, 917519, 262145, 1, 917520, 262145, 1, 917521, 262145, 1, 917522, 262145, 1, 917523, 262145, 1, 851968, 262145, 0, 851969, 262145, 0, 851970, 262145, 0, 851971, 262145, 0, 851972, 262145, 0, 851973, 262145, 0, 851974, 262145, 0, 851975, 262145, 0, 851976, 262145, 0, 851977, 262145, 0, 851978, 262145, 0, 851979, 262145, 0, 851980, 262145, 0, 851981, 262145, 0, 851982, 262145, 0, 851983, 262145, 0, 851984, 262145, 0, 851985, 262145, 0, 851986, 262145, 0, 458752, 262145, 0, 458753, 262145, 0, 458754, 262145, 0, 458755, 262145, 0, 458756, 262145, 0, 458757, 262145, 0, 458758, 262145, 0, 458759, 262145, 0, 458760, 262145, 0, 458761, 262145, 0, 458762, 262145, 0, 65536, 262145, 0, 65537, 262145, 0, 65538, 262145, 0, 65539, 262145, 0, 65540, 262145, 0, 65541, 262145, 0, 65542, 262145, 0, 65543, 262145, 0, 65544, 262145, 0, 65545, 262145, 0, 65546, 262145, 0, 65547, 262145, 0, 65556, 262145, 0, 65557, 262145, 0, 65558, 262145, 0, 65559, 262145, 0, 65560, 262145, 0, 65561, 262145, 0, 851990, 262145, 0, 851991, 262145, 0, 851992, 262145, 0, 851993, 262145, 0, 196608, 262145, 2, 196609, 262145, 2, 196610, 262145, 2, 196611, 262145, 2, 196612, 262145, 2, 196613, 262145, 2, 196614, 262145, 2, 196615, 262145, 2, 196616, 262145, 2, 196617, 262145, 2, 196618, 262145, 2, 589824, 262145, 2, 589825, 262145, 2, 589826, 262145, 2, 589827, 262145, 2, 589828, 262145, 2, 589829, 262145, 2, 589830, 262145, 2, 589831, 262145, 2, 589832, 262145, 2, 589833, 262145, 2, 589834, 262145, 2, 589835, 262145, 2, 589836, 262145, 2, 589837, 262145, 2, 589838, 262145, 2, 589839, 262145, 2, 589840, 262145, 2, 589841, 262145, 2, 589842, 262145, 2, 589843, 262145, 4, 983040, 262145, 2, 983041, 262145, 2, 983042, 262145, 2, 983043, 262145, 2, 983044, 262145, 2, 983045, 262145, 2, 983046, 262145, 2, 983047, 262145, 2, 983048, 262145, 2, 983049, 262145, 2, 983050, 262145, 2, 983051, 262145, 2, 983052, 262145, 2, 983053, 262145, 2, 983054, 262145, 2, 983055, 262145, 2, 983056, 262145, 2, 983057, 262145, 2, 983058, 262145, 2, 983059, 262145, 2, 983060, 262145, 2, 983061, 262145, 2, 983062, 262145, 2, 983063, 262145, 2, 983064, 262145, 4, 983065, 262145, 1, 393229, 327681, 1, 327693, 327681, 1, 262157, 327681, 1, 196621, 327681, 1, 131085, 327681, 1, 786453, 327681, 1, 720917, 327681, 1, 655381, 327681, 1, 589845, 327681, 1, 524309, 327681, 1, 458773, 327681, 1, 393237, 327681, 1, 327701, 327681, 1, 262165, 327681, 1, 131098, 262145, 1, 917530, 327681, 1, 393235, 196609, 1, 327699, 196609, 1, 262163, 196609, 1, 196627, 196609, 1, 131091, 196609, 1, 393227, 196609, 1, 327691, 196609, 1, 262155, 196609, 1, 65548, 262145, 0, 458766, 262145, 0, 458767, 262145, 0, 458768, 262145, 0, 458769, 262145, 0, 458770, 262145, 0, 851987, 262145, 5, 458763, 262145, 5, 458771, 262145, 5, 786451, 196609, 1, 720915, 196609, 1, 655379, 196609, 1, 851989, 196609, 5, 196629, 196609, 4, 196630, 262145, 2, 196631, 262145, 2, 196632, 262145, 2, 196633, 262145, 2, 196634, 262145, 2, 65555, 196609, 0, 983066, 327681, 1, 851994, 327681, 0, 196619, 262145, 4, 65549, 327681, 0, 458765, 196609, 5, 1048576, 1, 2, 1048581, 65537, 0, 1048588, 1, 1, 1048592, 65537, 2, 1048599, 65537, 0, 786458, 65537, 0, 19, 1, 1, 18, 1, 0, 17, 1, 0, 16, 1, 0, 15, 1, 0, 14, 1, 0, 13, 1, 2, 12, 1, 0, 11, 1, 0, 10, 1, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 6, 1, 0, 5, 1, 0, 4, 1, 0, 2, 1, 0, 1, 65537, 1, 0, 1, 0, 3, 1, 0, 393216, 1, 0, 327680, 1, 0, 262144, 1, 0, 786432, 1, 0, 720896, 1, 0, 655360, 1, 0, 786439, 1, 0, 720903, 1, 0, 655367, 1, 0, 655366, 1, 0, 655365, 1, 0, 655364, 1, 0, 655363, 1, 0, 655362, 1, 0, 655361, 65537, 0, 720897, 1, 0, 786433, 1, 0, 786434, 1, 0, 720898, 1, 0, 720899, 1, 0, 786435, 1, 0, 786436, 65537, 2, 720900, 1, 0, 720901, 1, 0, 786437, 1, 0, 786438, 1, 0, 720902, 1, 1, 655368, 1, 0, 720904, 65537, 1, 786440, 1, 0, 786441, 1, 0, 720905, 1, 0, 655369, 1, 0, 655370, 1, 0, 720906, 1, 0, 786442, 1, 0, 786443, 1, 0, 720907, 1, 0, 655371, 1, 0, 655372, 1, 0, 720908, 1, 0, 786444, 1, 0, 786445, 65537, 0, 720909, 1, 0, 655373, 1, 0, 655374, 1, 0, 720910, 65537, 0, 786446, 1, 0, 786447, 1, 0, 720911, 1, 0, 655375, 1, 0, 655376, 1, 0, 720912, 1, 0, 786448, 1, 0, 786449, 1, 0, 720913, 1, 0, 655377, 1, 0, 655378, 1, 0, 720914, 1, 0, 786450, 1, 0, 327687, 1, 0, 262151, 65537, 0, 262150, 1, 0, 262149, 1, 0, 262148, 1, 0, 262147, 1, 0, 262146, 1, 0, 262145, 65537, 2, 327681, 1, 0, 393217, 1, 0, 393218, 1, 0, 327682, 1, 0, 327683, 1, 0, 393219, 1, 0, 393220, 1, 1, 327684, 1, 0, 327685, 1, 0, 393221, 1, 0, 393222, 1, 0, 327686, 1, 0, 393223, 1, 0, 393224, 1, 0, 327688, 1, 0, 262152, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 2, 393226, 1, 0, 327690, 1, 0, 262154, 65537, 0, 262158, 1, 0, 196622, 1, 0, 131086, 1, 0, 65550, 1, 0, 65551, 1, 0, 131087, 65537, 0, 196623, 1, 0, 262159, 1, 0, 327695, 1, 0, 327694, 1, 0, 393230, 65537, 1, 393231, 1, 0, 393232, 1, 0, 327696, 1, 0, 262160, 1, 0, 196624, 1, 0, 131088, 1, 0, 65552, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262161, 1, 0, 327697, 1, 0, 393233, 1, 0, 393234, 65537, 2, 327698, 1, 0, 262162, 1, 0, 196626, 1, 0, 131090, 1, 0, 65554, 1, 0, 262166, 65537, 0, 393239, 1, 1, 786454, 1, 2, 524313, 65537, 0, 655384, 65537, 1, 65571, 1, 0, 35, 1, 0, 34, 1, 0, 33, 1, 0, 32, 1, 0, 31, 1, 0, 30, 1, 0, 29, 1, 0, 28, 1, 0, 27, 1, 0, 26, 1, 0, 25, 1, 0, 24, 1, 0, 23, 1, 0, 22, 1, 0, 21, 1, 0, 20, 1, 0, 65562, 262145, 0, 65563, 262145, 0, 131099, 262145, 1, 196635, 262145, 4, 262171, 196609, 1, 262170, 1, 0, 262169, 1, 0, 262168, 1, 0, 262167, 1, 0, 327703, 1, 0, 327702, 1, 0, 393238, 1, 0, 458774, 1, 0, 524310, 1, 0, 589846, 1, 0, 655382, 1, 0, 720918, 1, 0, 720919, 1, 0, 655383, 1, 0, 589847, 1, 0, 524311, 1, 0, 458775, 1, 0, 458776, 1, 0, 393240, 1, 0, 327704, 1, 0, 327705, 1, 0, 393241, 1, 0, 458777, 1, 0, 458778, 1, 0, 393242, 1, 0, 327706, 1, 0, 327707, 196609, 1, 393243, 196609, 1, 458779, 196609, 1, 524315, 196609, 2, 524314, 1, 0, 589850, 1, 0, 589849, 1, 0, 589848, 1, 0, 524312, 1, 0, 655385, 1, 0, 720921, 1, 0, 720920, 1, 0, 786456, 1, 0, 786455, 1, 0, 786457, 1, 0, 720922, 1, 0, 655386, 1, 0, 655387, 1, 0, 589851, 1, 0, 589852, 1, 0, 524316, 262145, 2, 458780, 262145, 1, 393244, 262145, 1, 327708, 262145, 1, 262172, 262145, 1, 196636, 262145, 1, 131100, 262145, 1, 65564, 262145, 0, 65565, 327681, 0, 131101, 327681, 1, 196637, 327681, 1, 262173, 327681, 1, 327709, 327681, 1, 393245, 196609, 5, 458781, 262145, 1, 524317, 262145, 2, 589853, 1, 0, 655389, 1, 0, 655388, 1, 0, 720924, 1, 0, 720923, 1, 0, 786459, 1, 0, 851995, 1, 0, 917531, 1, 0, 983067, 1, 0, 1048603, 1, 0, 1048602, 327681, 1, 1048601, 262145, 1, 1048600, 196609, 1, 1114136, 196609, 1, 1114135, 1, 0, 1114134, 1, 0, 1048598, 1, 0, 1048597, 1, 0, 1048596, 1, 0, 1048595, 1, 0, 1048594, 1, 0, 1048593, 1, 0, 1114129, 1, 0, 1114128, 1, 0, 1114127, 1, 0, 1048591, 1, 0, 1048590, 1, 0, 1048589, 1, 0, 1114125, 1, 0, 1114124, 1, 0, 1114123, 1, 0, 1048587, 1, 0, 1048586, 1, 0, 1048585, 1, 0, 1048584, 1, 0, 1048583, 1, 0, 1048582, 1, 0, 1114118, 1, 0, 1114117, 1, 0, 1114116, 1, 0, 1048580, 1, 0, 1048579, 1, 0, 1048578, 1, 0, 1048577, 1, 0, 1114113, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1245184, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1245185, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1179651, 1, 0, 1245187, 1, 0, 1245186, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1245188, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1245189, 65537, 2, 1310725, 1, 0, 1310726, 1, 0, 1245190, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1179656, 1, 0, 1245192, 1, 0, 1245191, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1245193, 1, 0, 1179657, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1179658, 1, 2, 1245194, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1245195, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1245196, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1245197, 65537, 1, 1179661, 1, 0, 1179662, 1, 0, 1114126, 1, 0, 1245198, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1245199, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1245200, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1245201, 1, 0, 1179665, 1, 0, 1179666, 65537, 0, 1114130, 1, 0, 1114131, 1, 0, 1179667, 1, 0, 1245203, 1, 0, 1245202, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1245204, 1, 2, 1179668, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1179669, 1, 0, 1245205, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1245206, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1245207, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1245208, 196609, 2, 1179672, 196609, 1, 1179673, 262145, 1, 1114137, 262145, 1, 1114138, 196609, 5, 1179674, 262145, 1, 1245210, 262145, 2, 1245209, 262145, 2, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1245211, 262145, 2, 1179675, 262145, 1, 1114139, 262145, 0, 1114140, 262145, 0, 1048604, 1, 0, 983068, 1, 2, 917532, 1, 0, 851996, 1, 0, 786460, 1, 0, 786461, 1, 0, 720925, 1, 0, 720926, 1, 0, 655390, 1, 1, 589854, 1, 0, 524318, 262145, 2, 458782, 262145, 1, 393246, 262145, 0, 327710, 1, 0, 262174, 1, 0, 196638, 1, 0, 131102, 1, 0, 65566, 1, 1, 65567, 1, 0, 131103, 1, 0, 196639, 1, 0, 262175, 1, 0, 327711, 1, 0, 393247, 262145, 0, 458783, 262145, 1, 524319, 262145, 2, 589855, 1, 0, 655391, 1, 0, 720927, 1, 0, 786463, 1, 2, 786462, 1, 0, 851998, 1, 0, 851997, 65537, 0, 917533, 1, 0, 983069, 1, 0, 1048605, 1, 0, 1114141, 262145, 0, 1179677, 262145, 1, 1179676, 262145, 1, 1245212, 262145, 2, 1310748, 1, 0, 1310749, 1, 0, 1245213, 262145, 2, 1245214, 262145, 2, 1179678, 262145, 1, 1114142, 262145, 5, 1048606, 196609, 1, 983070, 196609, 1, 917534, 196609, 0, 917535, 262145, 0, 851999, 1, 0, 852000, 1, 0, 786464, 1, 0, 720928, 1, 0, 655392, 1, 0, 589856, 1, 0, 524320, 327681, 2, 458784, 327681, 1, 393248, 327681, 0, 327712, 1, 0, 262176, 1, 0, 196640, 65537, 2, 131104, 1, 0, 65568, 1, 0, 65569, 1, 0, 131105, 1, 0, 196641, 1, 0, 262177, 1, 0, 327713, 1, 0, 393249, 1, 0, 458785, 1, 0, 524321, 1, 0, 589857, 1, 0, 655393, 1, 0, 720929, 1, 0, 786465, 1, 0, 852001, 1, 0, 917537, 1, 0, 917536, 327681, 0, 983072, 327681, 1, 983071, 262145, 1, 1048607, 262145, 1, 1114143, 262145, 1, 1179679, 262145, 1, 1245215, 262145, 2, 1310751, 1, 0, 1310750, 1, 0, 1310752, 1, 0, 1245216, 327681, 2, 1179680, 327681, 1, 1114144, 327681, 1, 1048608, 327681, 1, 1048609, 1, 0, 983073, 1, 0, 983074, 1, 0, 917538, 1, 0, 852002, 1, 0, 786466, 1, 0, 720930, 1, 0, 655394, 65537, 0, 589858, 1, 0, 524322, 1, 0, 458786, 1, 0, 393250, 1, 0, 327714, 1, 0, 262178, 1, 0, 196642, 1, 0, 131106, 1, 0, 65570, 1, 0, 131107, 1, 0, 196643, 1, 0, 262179, 1, 0, 327715, 1, 0, 393251, 1, 0, 458787, 65537, 1, 524323, 1, 0, 589859, 1, 0, 655395, 1, 0, 720931, 1, 0, 786467, 1, 0, 852003, 1, 0, 917539, 1, 0, 983075, 1, 0, 1048611, 1, 0, 1048610, 65537, 2, 1114146, 1, 0, 1114145, 1, 0, 1179681, 1, 0, 1245217, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1245218, 65537, 0, 1179682, 1, 0, 1179683, 1, 0, 1114147, 1, 0, 1245219, 1, 0, 1310755, 1, 0)
script = ExtResource("11_x7rl8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, 0)
anchor_mode = 0

[node name="PrimaryWeapon" parent="." instance=ExtResource("12_238j0")]

[node name="Towers" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_0trdu")

[node name="Tower1" parent="Towers" groups=["Tower"] instance=ExtResource("14_whx4x")]
position = Vector2(1002, 224)
scale = Vector2(10, 10)

[node name="Tower2" parent="Towers" groups=["Tower"] instance=ExtResource("14_whx4x")]
position = Vector2(1011, 480)
scale = Vector2(10.0747, 10.1598)

[node name="Turrets" type="Node" parent="."]
unique_name_in_owner = true

[node name="Turret" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(318, 176)

[node name="Turret2" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(403, 370)

[node name="Turret3" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(537, 176)

[node name="Turret4" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(166, 371)

[node name="Turret5" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(89, 176)

[node name="Turret6" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(780, 176)

[node name="Turret7" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(780, 367)

[node name="Turret8" parent="Turrets" instance=ExtResource("15_8q4kn")]
position = Vector2(1002, 367)

[node name="SpawnPoints" type="Node" parent="."]
script = ExtResource("16_bbnkd")

[node name="Spawner1" type="Marker2D" parent="SpawnPoints" groups=["spawn_point"]]
position = Vector2(2, 465)

[node name="Spawner2" type="Marker2D" parent="SpawnPoints" groups=["spawn_point"]]
position = Vector2(2, 271)

[node name="Spawner3" type="Marker2D" parent="SpawnPoints" groups=["spawn_point"]]
position = Vector2(2, 79)

[node name="WaveTimer" type="Timer" parent="SpawnPoints"]
autostart = true

[node name="SpawnInterval" type="Timer" parent="SpawnPoints"]
one_shot = true

[node name="WaveIndicatorBackGround" type="Panel" parent="SpawnPoints"]
offset_left = 2.0
offset_right = 84.0
offset_bottom = 23.0

[node name="WaveIndicator" type="Label" parent="SpawnPoints/WaveIndicatorBackGround"]
layout_mode = 0
offset_left = 4.0
offset_right = 44.0
offset_bottom = 23.0

[connection signal="pressed" from="UI/HUD/HBoxContainer/Pause_button" to="UI" method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/HUD/HBoxContainer/Fastforward_button" to="UI" method="_on_fastforward_button_pressed"]
[connection signal="pressed" from="UI/HUD/Open_upgrade_menu" to="UI/UpgradeTree" method="_on_open_upgrade_menu_pressed"]
[connection signal="pressed" from="UI/PausePanel/BackGround/MarginContainer/VBoxContainer/ContinueButton" to="UI" method="_on_continue_button_pressed"]
[connection signal="pressed" from="UI/PausePanel/BackGround/MarginContainer/VBoxContainer/RestartButton" to="UI" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/PausePanel/BackGround/MarginContainer/VBoxContainer/ExitButton" to="UI" method="_on_exit_button_pressed"]
[connection signal="timeout" from="UI/PausePanel/UnpauseTimer" to="UI" method="_on_unpause_timer_timeout"]
[connection signal="timeout" from="SpawnPoints/WaveTimer" to="SpawnPoints" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="SpawnPoints/SpawnInterval" to="SpawnPoints" method="_on_spawn_interval_timeout"]
